2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-AcuLaser_C1000.xml: Updated text.

	* driver/lj4dith.xml, driver/ljet4, opt/6.xml: The Epson AcuLaser
	  C4000 also understands PCL 5e, added it to "ljet4" and
	  "lj4dith".

	* printer/Epson-AcuLaser_C900.xml,
	  printer/Epson-AcuLaser_C1900.xml,
	  printer/Epson-AcuLaser_C1900PS.xml, driver/Postscript.xml,
	  driver/lj4dith.xml, driver/ljet4.xml, opt/159.xml, opt/6.xml,
	  opt/Postscript-Resolution.xml,
	  opt/pxlmono-PrinterResolution.xml: Added Epson AcuLaser C900 and
	  C1900.

	* printer/Epson-EPL-N2750, driver/epl2750.xml, driver/alc1900.xml,
	  opt/145.xml, opt/159.xml, opt/2.xml, opt/eplXXXX-Collate.xml,
	  opt/eplXXXX-Duplex.xml, opt/eplXXXX-FaceUp.xml,
	  opt/eplXXXX-InputSlot.xml, opt/eplXXXX-Landscape.xml,
	  opt/eplXXXX-MediaType.xml, opt/eplXXXX-NumCopies.xml,
	  opt/eplXXXX-RITOff.xml, opt/eplXXXX-TonerSaving.xml: Added new
	  driver entries for the Epson Kowa laser printer driver version
	  3.1.1.

	* printer/Epson-Stylus_C63.xml, printer/Epson-Stylus_C64.xml,
	  printer/Epson-PX_V500.xml, printer/Epson-Stylus_CX6400.xml,
	  printer/Epson-Stylus_CX8400.xml: Added new inkjet printers from
	  Epson.

2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: *BSD compatibility fix (thanks to Patrick Powell
	  from LPRng).

	* driver/ljetplus.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljet3.xml, driver/ljet3d.xml, driver/ljet2p.xml,
	  driver/lj4dithp.xml, driver/laserjet.xml, driver/cljet5.xml:
	  Applied patch from Patrick Powell to let the Perl one-liner for
	  the paper tray selection not read from newline to newline but
	  from ESC to ESC. This prevents from too long "lines" being read
	  into memory.

	* driver/Postscript.xml, driver/oki4w.xml: Fixes for BSD (does not
	  understand "echo -en ..."). Thanks to Bruce J.A. Nourish (bjan
	  at bjan dot net).

2003-10-09  David Suffield <david.suffield@hp.com>

	* Added new printers to db/source/printer/