@@ -17,6 +17,6 @@
 	<arg_defval>1</arg_defval>
 	</constraint>
     </constraints>
-    <arg_max>999</arg_max>
+    <arg_max>100</arg_max>
     <arg_min>1</arg_min>
 </option>
