@@ -1,3 +1,12 @@
+2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/93.xml, opt/eplXXXX-NumCopies.xml, opt/foo2zjs-Copies.xml,
+	  gdi-Copies.xml: Reduced maximum amount of copies from 999 to
+	  100, as the Adobe PostScript driver for Windows crashes on an
+	  option with 999 choices in the PPD file. See
+
+	  http://www.cups.org/newsgroups.php?s2623+gcups.general+v2632
+
 2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-AcuLaser_C1000.xml: Updated text.
